Remove the need for Jeweler and remove a bunch of stuff that we probably won't need.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,4 @@
-coverage.html
-coverage/*
-experiments/*
-pkg/*
-doc/*
-log/*
-tmp/*
-TAGS
-semantic.cache
-/www/output/
-local/*
-.ditz-config
-*.rbc
+.bundle/
+coverage.data
+coverage/
+smqueue-*.gem
